# sphinxcontrib-autoyaml

./: .editorconfig  .gitignore  CHANGELOG  LICENSE  MANIFEST.in  README.md  README.rst  ci.sh  pyproject.toml  requirements-sphinx3.txt  requirements-sphinx4.txt  requirements-sphinx5.txt  setup.py  sphinxcontrib_autoyaml.py  sphinxcontrib_yaml.py  tox.ini
.github/workflows/: tests.yml
sphinxcontrib/autoyaml/: __init__.py
tests/: __main__.py  requirements-1.txt  requirements-2.txt  requirements-3.txt  requirements-4.txt  requirements-5.txt  test_autoyaml.py
tests/examples/output/: capped1.yml  capped2.txt  capped2.yml  comment-in-nested-sequence.txt  comment-in-nested-sequence.yml  comment-in-sequence.txt  comment-in-sequence.yml  comment-in-uncommented-mapping.txt  comment-in-uncommented-mapping.yml  comment-with-complex-key.yml  comment-without-trailing.txt  comment-without-trailing.yml  commented-scalar-in-sequence.yml  conf.py  embedded-rst-in-comment.txt  embedded-rst-in-comment.yml  flow-style.txt  flow-style.yml  index.rst  index.txt  index.yml  index2.txt  multilevel-commented-mapping.txt  multilevel-commented-mapping.yml  multiline-comment.txt  multiline-comment.yml  multiline-text.txt  multiline-text.yml  multiple-documents.txt  multiple-documents.yml  padded-comment.txt  padded-comment.yml  simple-key.yml
tests/examples/wrong_location1/: conf.py  index.rst
tests/examples/wrong_location2/: conf.py
